# agent-trajectory-diff

./: README.md  cli.py  pyproject.toml
tests/: test_differ.py  test_loader.py
tests/fixtures/: baseline.jsonl  candidate.jsonl
trajdiff/: __init__.py  differ.py  loader.py  render.py
